Added football logo

--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
 
 <main class="form-signin">
   <form action="/" method="post">
-    <img class="mb-4" src="images/dog-img.jpg" alt="" width="72" height="57">
+    <img class="mb-4" src="images/football.jpeg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Sign up to my newsletter</h1>
 
     <div class="form-floating">
