--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
 
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <p class="mt-5 mb-3 text-muted">&copy; Reuben Khadka</p>
   </form>
 </main>
 
