Added required in text

--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="form-floating">
-      <input type="email" name="email" class="form-control bottom" placeholder="Email">
+      <input type="email" name="email" class="form-control bottom" placeholder="Email" required>
     </div>
 
 
